--- a/ReceiptSample.html
+++ b/ReceiptSample.html
@@ -75,7 +75,7 @@
         
 
         .list-group-flush span{
-            font-size: 18px;
+            font-size: 15px;
             padding-left: 20px;
         }
 
@@ -108,15 +108,15 @@
     </div>
     <div class="main-content">
         <ul class="list-group list-group-flush">
-            <li class=""><span class="font-strong">Received with thanks from : </span> TATA CONSULTANCY SERVICES LTD - MAHARASHTRA</li>
-            <li class=""><span class="font-strong">The sum of : </span> Rs. 22408.9</li>
-            <li class=""><span class="font-strong">The sum of in words : </span> RUPEES TWENTY TWO THOUSAND FOUR HUNDRED EIGHT AND NINETY FOUR PAISE ONLY
+            <li class=""><span class="fst-italic">Received with thanks from : </span> TATA CONSULTANCY SERVICES LTD - MAHARASHTRA</li>
+            <li class=""><span class="fst-italic">The sum of : </span> Rs. 22408.9</li>
+            <li class=""><span class="fst-italic">The sum of in words : </span> RUPEES TWENTY TWO THOUSAND FOUR HUNDRED EIGHT AND NINETY FOUR PAISE ONLY
             </li>
-            <li class=""><span class="font-strong">By : </span> NEFT/CHEQUE/CASH - REFF NUMBER - REMARKS</li>
+            <li class=""><span class="fst-italic">By : </span> NEFT/CHEQUE/CASH - REFF NUMBER - REMARKS</li>
           </ul>
           <h6 class="mt-3 text-center font-strong">on account of payment against the below details</h6>
 
-          <table class="table table-borderless w-100">
+          <table class="table table-borderless text-center w-100">
             <thead class="border-bottom border-dark">
                 <tr>
                     <th>Invoice No.</th>
