--- a/InvoiceLatowithExpense-working.html
+++ b/InvoiceLatowithExpense-working.html
@@ -4,11 +4,118 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+  @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+body {
+    font-size: 11px !important;
+    font-family: "Lato", sans-serif !important;
+    font-weight: 300;
+    font-style: normal;
+}
+
+.border-top-bottom-thik {
+    border-top: 2px solid #000;
+    border-bottom: 2px solid #000;
+    width: 100%;
+}
+
+.border-bottom-thik {
+    border-bottom: 2px solid #000;
+    width: 100%;
+}
+
+.border-top-bottom-line {
+    border-bottom: 2px solid #000;
+    width: 100%;
+}
+
+.font-strong {
+    font-weight: bolder;
+}
+
+.header {
+    position: fixed;
+    width: 100%;
+    height: 180px; /* Ensure this matches the height of your header */
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    background-color: #f8f8f8; /* Example background color */
+}
+
+.duty_slip_card {
+    clear: both;
+    margin-top: 182px;
+    page-break-before: auto;
+    page-break-inside: avoid;
+    border: 2px solid #6b6a6a;
+    padding: 5px;
+}
+
+.print-adjust {
+    margin-top: 80px; /* Additional margin to ensure it doesn't overlap with the fixed header */
+}
+
+@media print {
+    .header {
+        position: fixed; /* Keep header fixed at the top */
+        top: 0;
+        width: 100%;
+        z-index: 9999; /* Ensure it stays on top */
+        background: white; /* To avoid content being seen through the header */
+    }
+
+    .main-content {
+        position: relative;
+        margin-top: 180px; /* Set this to the height of your header */
+        padding: 20px;
+    }
+
+    .duty_slip_card {
+        page-break-inside: avoid;
+        margin-top: 182px; /* Match the initial margin-top to ensure no overlap */
+    }
+
+    .print-adjust {
+        margin-top: 200px; /* Additional margin to ensure no overlap during print */
+    }
+
+}
+
+    </style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
+    <div class="header">
+        <table class="w-100">
+            <tr>
+                <td><img src="image/logo.png" width="270"></td>
+                <td>Vikas Center, S V Road, BEST Colony, Santacruz West,
+                    Mumbai, Maharashtra 400054, India<br>Tel.: 9619495878 | Email: reservations@autoriders.in
+                </td>
+                <td rowspan="2" class="image-cell">
+                    <img src="image/qr.jpg" class="text-center" width="150" height="150">
+                </td>
+            </tr>
+            <tr>
+                <td colspan="2">
+                    <ul class="list-unstyled">
+                        <li>IRN: 1aa7fc6f03c0634f6dc5a646d34b465015beaebd38b0031c6d31220ea955a0fa</li>
+                        <li>ACK NO: 122420151191762</li>
+                        <li>ACK DATE: 12/02/2024 17:51</li>
+                    </ul>
+                </td>
+            </tr>
+            <tr>
+                <td class="font-bold border-top-bottom-thik font-strong" style="text-align:center" colspan="3">
+                    TAX INVOICE
+                </td>
+            </tr>
+        </table>
+    </div>
     <div class="main-content">
         <div class="client-details">
             <table class="w-100">
@@ -488,8 +595,42 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script>
+  function isOverlapping(element1, element2) {
+    const rect1 = element1.getBoundingClientRect();
+    const rect2 = element2.getBoundingClientRect();
+
+    return !(
+        rect1.bottom < rect2.top ||
+        rect1.top > rect2.bottom ||
+        rect1.right < rect2.left ||
+        rect1.left > rect2.right
+    );
+}
+
+function checkOverlapForPrint() {
+    const header = document.querySelector('.header');
+    const mainContent = document.querySelector('.main-content');
+    const dutySlipCards = document.querySelectorAll('.duty_slip_card');
+
+    // Add a margin to the main content to ensure it does not overlap with the header
+    if (mainContent) {
+        mainContent.style.marginTop = `${header.offsetHeight}px`;
+    }
+
+    dutySlipCards.forEach(card => {
+        if (isOverlapping(header, card)) {
+            card.classList.add('print-adjust');
+            console.log('Overlap detected:', card);
+        } else {
+            card.classList.remove('print-adjust');
+        }
+    });
+}
+
+window.addEventListener('beforeprint', checkOverlapForPrint);
 
     </script>
+
 </body>
 
 </html>
