--- a/InvoiceLatowithFixHeader.html
+++ b/InvoiceLatowithFixHeader.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
-  @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 
 body {
     font-size: 11px !important;
@@ -37,81 +37,54 @@ body {
 .header {
     position: fixed;
     width: 100%;
-    height: 180px; /* Ensure this matches the height of your header */
+    height: 180px;
     top: 0;
     left: 0;
+    background-color: white;
     z-index: 1000;
-    background-color: #f8f8f8; /* Example background color */
+}
+
+.main-content {
+    position: relative;
+    margin-top: 180px;
+    padding: 20px;
 }
 
 .duty_slip_card {
-    clear: both;
-    margin-top: 182px;
     page-break-before: auto;
     page-break-inside: avoid;
     border: 2px solid #6b6a6a;
     padding: 5px;
 }
 
-.print-adjust {
-    margin-top: 80px; /* Additional margin to ensure it doesn't overlap with the fixed header */
-}
-
 @media print {
     .header {
-        position: fixed; /* Keep header fixed at the top */
-        top: 0;
+        position: fixed;
         width: 100%;
-        z-index: 9999; /* Ensure it stays on top */
-        background: white; /* To avoid content being seen through the header */
+        height: 180px;
+        top: 0;
+        left: 0;
     }
 
     .main-content {
         position: relative;
-        margin-top: 180px; /* Set this to the height of your header */
+        margin-top: 180px;
         padding: 20px;
     }
 
     .duty_slip_card {
         page-break-inside: avoid;
-        margin-top: 182px; /* Match the initial margin-top to ensure no overlap */
+        page-break-after: always;
     }
 
-    .print-adjust {
-        margin-top: 200px; /* Additional margin to ensure no overlap during print */
-    }
-
-}
-
-
-
-
-@media print {
-
-    .image-cell {
-        text-align: right;
-    }
-
-    .header {
-        position: fixed;
-        width: 100%;
-        top: 0;
-        right: 0;
-        left: 0;
-    }
-
-    table{
-        page-break-inside: avoid;
-        border-spacing: 10px;
-    }
-
-    .parking_slip .parking_slip_image {
+    .parking_slip {
         page-break-before: auto;
-        page-break-inside: avoid;
     }
 
+    /* table {
+        page-break-before: auto;
+    } */
 }
-
     </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -309,7 +282,7 @@ body {
         </div>
 
         <!-- DUTY SUMMER START -->
-        <div class="duty_slip_card">
+        <div class="duty_slip_card1">
             <div class="border-bottom-thik  font-strong">
                 Duty Slip No.: BLR/DSN/2403/02440
             </div>
@@ -443,7 +416,7 @@ body {
                 </tbody>
             </table>
 
-            <div class="mb-2">
+            <div class="mb-2 parking_slip">
                 <h6 class="text-center font-strong border-bottom mb-1">Parking / Expense Slips</h6>
                 <div class="row">
                     <div class="col-3">
@@ -602,7 +575,7 @@ body {
         <!-- DUTY SUMMER END -->
 
 
-        <div class="mb-2 mt-2">
+        <div class="mb-2 mt-2 parking_slip">
             <h6 class="text-center font-strong border-bottom border-top mb-1">Parking / Expense Slips</h6>
             <div class="row">
                 <div class="col-3">
@@ -624,40 +597,20 @@ body {
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script>
-  function isOverlapping(element1, element2) {
-    const rect1 = element1.getBoundingClientRect();
-    const rect2 = element2.getBoundingClientRect();
+        function adjustMargins() {
+            const header = document.querySelector('.header');
+            const headerHeight = header.offsetHeight;
+            const dutySlipCards = document.querySelectorAll('.duty_slip_card');
 
-    return !(
-        rect1.bottom < rect2.top ||
-        rect1.top > rect2.bottom ||
-        rect1.right < rect2.left ||
-        rect1.left > rect2.right
-    );
-}
-
-function checkOverlapForPrint() {
-    const header = document.querySelector('.header');
-    const mainContent = document.querySelector('.main-content');
-    const dutySlipCards = document.querySelectorAll('.duty_slip_card');
-
-    // Add a margin to the main content to ensure it does not overlap with the header
-    if (mainContent) {
-        mainContent.style.marginTop = `${header.offsetHeight}px`;
-    }
-
-    dutySlipCards.forEach(card => {
-        if (isOverlapping(header, card)) {
-            card.classList.add('print-adjust');
-            console.log('Overlap detected:', card);
-        } else {
-            card.classList.remove('print-adjust');
+            dutySlipCards.forEach(card => {
+                const rect = card.getBoundingClientRect();
+                if (rect.top < headerHeight) {
+                    card.style.marginTop = `${headerHeight + 20}px`; // Add some extra margin
+                }
+            });
         }
-    });
-}
 
-window.addEventListener('beforeprint', checkOverlapForPrint);
-
+        window.addEventListener('beforeprint', adjustMargins);
     </script>
 
 </body>
